# multiplayer-flappybird

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: endpoints.rs  game_lobby.rs  lobby.rs  main.rs  main2.rs  messages.rs  mod.rs  socket.rs
src/game/: game.rs  mod.rs  player.rs
src/game/objects/: bird.rs  collision.rs  mod.rs  traits.rs  wall.rs
static/: index.html
