[package]
name = "websocket-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
actix = "0.13.0"
actix-files = "0.6"
actix-web = {version = "4.1.0", features = []}
actix-web-actors = "4.1"
tokio = {version = "1.20.1", features = ["full"]}
